--- a/default-config.json
+++ b/default-config.json
@@ -1,3 +1,12 @@
 {
-  "enabled": true
+    "enabled": true,
+    "settings": {
+        "Language": {
+            "type": "selector",
+            "value": "English",
+            "options": [
+                "Français"
+            ]
+        }
+    }
 }
