Removed json and use class

--- a/default-config.json
+++ b/default-config.json
@@ -5,6 +5,7 @@
             "type": "selector",
             "value": "English",
             "options": [
+                "English",
                 "Français"
             ]
         }
