instead of having a selector just make it based on current language

--- a/default-config.json
+++ b/default-config.json
@@ -1,13 +1,3 @@
 {
-    "enabled": true,
-    "settings": {
-        "Language": {
-            "type": "selector",
-            "value": "English",
-            "options": [
-                "English",
-                "Français"
-            ]
-        }
-    }
+    "enabled": true
 }
